--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="mt-8 lg:grid grid-cols-3 gap-10">
           <!-- cards go here -->
           <div class="card hover:shadow-lg"> 
-            <img src="./img/stew.jpg" alt="stew" class="w-full h-32 sm:h-48 object-cover">
+            <img src="img/stew.jpg" alt="stew" class="w-full h-32 sm:h-48 object-cover">
             <div class="m-4">
               <span class="font-bold">5 Bean Chili Stew</span>
               <span class="block text-gray-500 text-sm">Recipe by Mario</span>
@@ -81,7 +81,7 @@
             </div>
           </div>
           <div class="card hover:shadow-lg"> 
-            <img src="./img/noodles.jpg" alt="noodles" class="w-full h-32 sm:h-48 object-cover">
+            <img src="img/noodles.jpg" alt="noodles" class="w-full h-32 sm:h-48 object-cover">
             <div class="m-4">
               <span class="font-bold">Veg Noodles</span>
               <span class="block text-gray-500 text-sm">Recipe by Mario</span>
@@ -94,7 +94,7 @@
             </div>
           </div>
           <div class="card hover:shadow-lg"> 
-            <img src="./img/Curry.jpg" alt="curry" class="w-full h-32 sm:h-48 object-cover">
+            <img src="img/Curry.jpg" alt="curry" class="w-full h-32 sm:h-48 object-cover">
             <div class="m-4">
               <span class="font-bold">Tofu Curry</span>
               <span class="block text-gray-500 text-sm">Recipe by Mario</span>
