--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
           </div>
           <div class="card hover:shadow-lg"> 
-            <img src="img/Curry.jpg" alt="curry" class="w-full h-32 sm:h-48 object-cover">
+            <img src="img/curry.jpg" alt="curry" class="w-full h-32 sm:h-48 object-cover">
             <div class="m-4">
               <span class="font-bold">Tofu Curry</span>
               <span class="block text-gray-500 text-sm">Recipe by Mario</span>
